--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Ambroselli UG</title>
+	<title>Ambroselli GmbH</title>
 	<meta name="description" content="We are a software development company from Potsdam, Germany. We develop gorgeous software that scales.">
 	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:500,400" rel="stylesheet">
 	<style>
@@ -132,9 +132,9 @@
 </head>
 <body>
 	<header>
-		<h1>Welcome to <span>Ambroselli UG</span>.</h1>
+		<h1>Welcome to <span>Ambroselli GmbH</span>.</h1>
 
-		<h3>We develop beautiful software that scales.<h3>
+		<h3>Makers creating innovative solutions and disrupting categories.<h3>
 	</header>
 
 	<div class="main">
