--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 	<footer>
 		<p class="left">
-			Ambroselli UG (haftungsbeschränkt) <br />
+			Ambroselli GmbH <br />
 			Friedrich-Engels-Str. 36 <br />
 			14482 Potsdam
 		</p>
